--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:theme="@style/Theme.Finlog"
         tools:targetApi="31">
         <activity
+            android:name=".dialog_card_details"
+            android:exported="false" />
+        <activity
+            android:name=".item_card"
+            android:exported="false" />
+        <activity
             android:name=".NavigationActivity"
             android:exported="false" />
         <activity
